feat: 크리스마스 프로모션 완성 및 테스트 추가